added basic info

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 <body>
     <p>Hello World!</p>
     <p>Hello World!</p>
+    <p>The name I go by in class: Shay</p>
+    <p>Full Name: Shay Patel</p>
+    <a href="https://mattm401.github.io/">Link to Class Website</a>
+
+
+
+
 
 </body>
  
