--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <p>The name I go by in class: Shay</p>
     <p>Full Name: Shay Patel</p>
     <a href="https://mattm401.github.io/">Link to Class Website</a>
+    <img src="pic.jpeg" alt="Professional Photo">
+
 
 
 
