--- a/index.html
+++ b/index.html
@@ -8,12 +8,21 @@
 </head>
  
 <body>
-    <img src="pic.jpeg" alt="Professional Photo">
-    <p>Hello World!</p>
-    <p>Hello World!</p>
-    <p>The name I go by in class: Shay</p>
-    <p>Full Name: Shay Patel</p>
-    <a href="https://mattm401.github.io/">Link to Class Website</a>
+    <div>
+        <h1>Welcome to My Website!</h1>
+        <img src="pic.jpeg" alt="Professional Photo">
+    </div> 
+    <div> 
+        <h2>Full Name: Shay Patel</h2>
+        <p>The name I go by in class: Shay</p>
+    </div>
+    <div>
+        <a href="https://mattm401.github.io/">Link to Class Website</a>
+        <p>Previous Student: Link will be added when information is available.</p>
+        <p>Next Student: Link will be added when information is available.</p>
+        <a href="">Link to About Me Page</a>
+    </div>
+
 
 
 
