added to about me

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -8,5 +8,9 @@
 <h1>About Me</h1>
 <h2>This page describes some of my interests, and more. </h2>
 
+
+<a href="https://shay97279.github.io/">Back to Index</a>
+
+
 </body>
 </html>
