added to about me and index

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -8,6 +8,14 @@
 <h1>About Me</h1>
 <h2>This page describes some of my interests, and more. </h2>
 
+<p>My favorite aspects of web development:</p>
+<ul>
+    <li>Front end and User Interface</li>
+    <li>Developing an engaging and cohesive UX</li>
+    <li>Experimenting with different web app frameworks and libraries</li>
+
+</ul>
+<p>Interesting Fact: My favorite basketball team is the Chicago Bulls. </p>
 
 <a href="https://shay97279.github.io/">Back to Index</a>
 
