--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href="https://mattm401.github.io/">Link to Class Website</a>
         <p>Previous Student: Link will be added when information is available.</p>
         <p>Next Student: Link will be added when information is available.</p>
-        <a href="">Link to About Me Page</a>
+        <a href="https://shay97279.github.io/aboutMe">Link to About Me Page</a>
     </div>
 
 
