added info to aboutMe

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -8,6 +8,7 @@
 <h1>About Me</h1>
 <h2>This page describes some of my interests, and more. </h2>
 
+<p>My name is Shay! I'm a current junior at UD majoring in computer science. When not studying, I like going to the gym, playing basketball, going on walks, and listening to music. My favorite artists are JayZ and Future. My favorite language to code in is Java, and my favorite framework is SpringBoot. </p>
 <p>My favorite aspects of web development:</p>
 <ul>
     <li>Front end and User Interface</li>
