--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <body>
     <div>
         <h1>Welcome to My Website!</h1>
+        <!--Shay Patel
+            CISC474
+            Personal Web Page 1
+            patelsap@udel.edu -->
+            
         <img src="pic.jpeg" alt="Professional Photo">
     </div> 
     <div> 
