--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
  
 <head>
     <title>
@@ -27,11 +27,6 @@
         <p>Next Student: Link will be added when information is available.</p>
         <a href="https://shay97279.github.io/aboutMe">Link to About Me Page</a>
     </div>
-
-
-
-
-
 
 
 </body>
