added inline style

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
  
 <body>
     <div>
-        <h1>Welcome to My Website!</h1>
-        <h2>Full Name: Shay Patel</h2>
+        <h1 style="color:blue;text-align:center">Welcome to My Website!</h1>
+        <h2 style="color:blue;text-align:center">Full Name: Shay Patel</h2>
 
         <!--Shay Patel
             CISC474
