added in line center

--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
 </head>
  
 <body>
-    <div>
-        <h1 style="color:blue;text-align:center">Welcome to My Website!</h1>
-        <h2 style="color:blue;text-align:center">Full Name: Shay Patel</h2>
+    <div style="text-align:center">
+        <h1 style="text-align:center">Welcome to My Website!</h1>
+        <h2 style="text-align:center">Full Name: Shay Patel</h2>
 
         <!--Shay Patel
             CISC474
             Personal Web Page 1
             patelsap@udel.edu -->
             
-        <img src="pic.jpeg" alt="Professional Photo">
+        <img src="pic.jpeg" alt="Professional Photo" >
     </div> 
     <div> 
         <p>The name I go by in class: Shay</p>
     </div>
-    <div>
+    <div style="text-align:center">
         <a href="https://mattm401.github.io/">Link to Class Website</a>
         <p>Previous Student: Link will be added when information is available.</p>
         <p>Next Student: Link will be added when information is available.</p>
