indented code, improved readability

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
  
 <body>
+    
     <div style="text-align:center">
         <h1 style="text-align:center">Welcome to My Website!</h1>
         <h2 style="text-align:center">Full Name: Shay Patel</h2>
@@ -19,7 +20,7 @@
             
         <img src="pic.jpeg" alt="Professional Photo" >
     </div> 
-    <div> 
+    <div style="text-align:center"> 
         <p>The name I go by in class: Shay</p>
     </div>
     <div style="text-align:center">
