--- a/aboutMe.html
+++ b/aboutMe.html
@@ -4,22 +4,27 @@
     <title>About Me</title>
 </head>
 <body>
+    <div style="text-align:center">
+        <h1>About Me</h1>
+        <h2>This page describes some of my interests, and more. </h2>
 
-<h1>About Me</h1>
-<h2>This page describes some of my interests, and more. </h2>
+        <p>My name is Shay! I'm a current junior at UD majoring in computer science. When not studying, I like going to the gym, playing basketball, going on walks, and listening to music. My favorite artists are JayZ and Future. My favorite language to code in is Java, and my favorite framework is SpringBoot. </p>
 
-<p>My name is Shay! I'm a current junior at UD majoring in computer science. When not studying, I like going to the gym, playing basketball, going on walks, and listening to music. My favorite artists are JayZ and Future. My favorite language to code in is Java, and my favorite framework is SpringBoot. </p>
-<p>My favorite aspects of web development:</p>
-<ul>
-    <li>Front end and User Interface</li>
-    <li>Developing an engaging and cohesive UX</li>
-    <li>Experimenting with different web app frameworks and libraries</li>
+    </div>
 
-</ul>
-<p>Interesting Fact: My favorite basketball team is the Chicago Bulls. </p>
+    <div style="text-align:center">
+        <p>My favorite aspects of web development:</p>
+        <ul>
+            <li>Front end and User Interface</li>
+            <li>Developing an engaging and cohesive UX</li>
+            <li>Experimenting with different web app frameworks and libraries</li>
 
-<a href="https://shay97279.github.io/">Back to Index</a>
+        </ul>
+        <p>Interesting Fact: My favorite basketball team is the Chicago Bulls. </p>
 
+        <a href="https://shay97279.github.io/">Back to Index</a>
+
+    </div>
 
 </body>
 </html>
