--- a/aboutMe.html
+++ b/aboutMe.html
@@ -2,6 +2,7 @@
 <html lang="en-US">
 <head>
     <title>About Me</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div style="text-align:center">
