--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en-US">
  
 <head>
-    <title>
-        First Web Page
-    </title>
+    <link rel="stylesheet" href="styles.css">
+    <title> Main Page </title>
 </head>
  
 <body>
-    
+
     <div style="text-align:center">
         <h1 style="text-align:center">Welcome to My Website!</h1>
         <h2 style="text-align:center">Full Name: Shay Patel</h2>
