added style rules for box

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
  
 <body>
-
+<div class="box">
     <div style="text-align:center">
         <h1 style="text-align:center">Welcome to My Website!</h1>
         <h2 style="text-align:center">Full Name: Shay Patel</h2>
@@ -29,6 +29,7 @@
         <a href="https://shay97279.github.io/aboutMe">Link to About Me Page</a>
     </div>
 
+</div>
 
 </body>
  
