--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  
 <body>
 <div class="box">
-    <div style="text-align:center" class="box">
+    <div style="text-align:center" >
         <h1 style="text-align:center">Welcome to My Website!</h1>
         <h2 style="text-align:center">Full Name: Shay Patel</h2>
 
