--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
  
 <body>
-<div class="box">
+<div class="box" style="text-align:center">
     <div style="text-align:center" >
         <h1 style="text-align:center">Welcome to My Website!</h1>
         <h2 style="text-align:center">Full Name: Shay Patel</h2>
