added previous and next student links

--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
 
     <div style="text-align:center">
         <p>The name I go by in class: Shay</p>
-        <a href="https://mattm401.github.io/">Link to Class Website</a>
-        <p>Previous Student: Link will be added when information is available.</p>
-        <p>Next Student: Link will be added when information is available.</p>
+        <a href="https://wowjack.github.io/">Previous Student</a>
+        <a href="https://rohanyar.github.io/">Next Student</a>
+
+    
         <a href="https://shay97279.github.io/aboutMe">Link to About Me Page</a>
     </div>
 
