added class website

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         <br>
         <a href="https://rohanyar.github.io/">Next Student</a>
         <br>
+        <a href="https://mattm401.github.io/">Class Website</a>
+
     
         <a href="https://shay97279.github.io/aboutMe">Link to About Me Page</a>
     </div>
