--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 </head>
  
 <body>
+
+    <div class="topnav">
+        <a class="active" href="#home">Home</a>
+        <a href="#news">News</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
+    </div>
+
 <div class="box" style="text-align:center">
     <div style="text-align:center" >
         <h1 style="text-align:center">Welcome to My Website!</h1>
