--- a/aboutMe.html
+++ b/aboutMe.html
@@ -5,6 +5,12 @@
     <link rel="stylesheet" href="https://shay97279.github.io/main.css">
 </head>
 <body>
+    <div class="topnav">
+        <a class="active" href="#home">Home</a>
+        <a href="#news">News</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
+    </div>
     <div style="text-align:center">
         <h1>About Me</h1>
         <h2>This page describes some of my interests, and more. </h2>
