--- a/aboutMe.html
+++ b/aboutMe.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <div class="topnav">
-        <a class="active" href="#home">Home</a>
-        <a href="#news">News</a>
+        <a href="https://shay97279.github.io/">Home</a>
+        <a class="active" href="#aboutme">About Me</a>
         <a href="#contact">Contact</a>
         <a href="#about">About</a>
     </div>
