--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div class="topnav">
         <a class="active" href="#home">Home</a>
-        <a href="#news">News</a>
+        <a href="https://shay97279.github.io/aboutMe">About Me</a>
         <a href="#contact">Contact</a>
         <a href="#about">About</a>
     </div>
