course page to navbar

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -8,7 +8,7 @@
     <div class="topnav">
         <a href="https://shay97279.github.io/">Home</a>
         <a class="active" href="#aboutme">About Me</a>
-        <a href="#contact">Contact</a>
+        <a href="https://mattm401.github.io/">GitHub Course Page</a>
         <a href="#about">About</a>
     </div>
     <div style="text-align:center">
