--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="topnav">
         <a class="active" href="#home">Home</a>
         <a href="https://shay97279.github.io/aboutMe">About Me</a>
-        <a href="#contact">Contact</a>
+        <a href="https://mattm401.github.io/">GitHub Course Page</a>
         <a href="#about">About</a>
     </div>
 
