added more to navbar

--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
     <div class="topnav">
         <a class="active" href="#home">Home</a>
         <a href="https://shay97279.github.io/aboutMe">About Me</a>
-        <a href="https://mattm401.github.io/">GitHub Course Page</a>
-        <a href="#about">About</a>
+        <a href="https://mattm401.github.io/">Course Page</a>
+        <a href="https://rohanyar.github.io/">Next Student</a>
+        <a href="https://wowjack.github.io/">Previous Student</a>
+
+        <a href="#about">Contact Form</a>
     </div>
 
 <div class="box" style="text-align:center">
