--- a/aboutMe.html
+++ b/aboutMe.html
@@ -8,8 +8,10 @@
     <div class="topnav">
         <a href="https://shay97279.github.io/">Home</a>
         <a class="active" href="#aboutme">About Me</a>
-        <a href="https://mattm401.github.io/">GitHub Course Page</a>
-        <a href="#about">About</a>
+        <a href="https://mattm401.github.io/">Course Page</a>
+        <a href="https://rohanyar.github.io/">Next Student</a>
+        <a href="https://wowjack.github.io/">Previous Student</a>
+        <a href="#about">Contact Form</a>
     </div>
     <div style="text-align:center">
         <h1>About Me</h1>
