--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
         <a class="active" href="#home">Home</a>
         <a href="https://shay97279.github.io/aboutMe">About Me</a>
         <a href="https://mattm401.github.io/">Course Page</a>
+        <a href="https://faithlovell.github.io/">Previous Student</a>
         <a href="https://rohanyar.github.io/">Next Student</a>
-        <a href="https://wowjack.github.io/">Previous Student</a>
-
         <a href="#about">Contact Form</a>
     </div>
 
@@ -34,7 +33,7 @@
     <div style="text-align:center">
         <p>The name I go by in class: Shay</p> 
         <br>
-        <a href="https://wowjack.github.io/">Previous Student</a>
+        <a href="https://faithlovell.github.io/">Previous Student</a>
         <br>
         <a href="https://rohanyar.github.io/">Next Student</a>
         <br>
