changed file structure

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
     <title>About Me</title>
-    <link rel="stylesheet" href="https://shay97279.github.io/styles.css">
+    <link rel="stylesheet" href="https://shay97279.github.io/css/styles.css">
 </head>
 <body>
     <div class="topnav">
