--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
  
 <head>
-    <link rel="stylesheet" href="https://shay97279.github.io/main/styles.css">
+    <link rel="stylesheet" href="https://shay97279.github.io/css/styles.css">
     <title> Main Page </title>
 </head>
  
