--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="https://mattm401.github.io/">Course Page</a>
         <a href="https://faithlovell.github.io/">Previous Student</a>
         <a href="https://rohanyar.github.io/">Next Student</a>
-        <a href="#about">Contact Form</a>
+        <a href="https://shay97279.github.io/contactForm">Contact Form</a>
     </div>
 
 <div class="box" style="text-align:center">
