--- a/contactForm.html
+++ b/contactForm.html
@@ -117,14 +117,31 @@
       
     ></script>
 
-    <script type="text/javascript">      (function () {
-        emailjs.init("YOUR_USER_ID");
-        emailjs.send("service_isty8b7","template_hghujn7");
-
-      })();
-    </script>
 
 
+<script>
+  // listen to the form submission
+  document
+    .getElementById("myForm")
+    .addEventListener("submit", function (event) {
+      event.preventDefault();
+
+      const serviceID = "service_b4qmiqc";
+      const templateID = "template_fv38whr";
+
+      // send the email here
+      emailjs.sendForm(serviceID, templateID, this).then(
+        (response) => {
+          console.log("SUCCESS!", response.status, response.text);
+          alert("SUCCESS!");
+        },
+        (error) => {
+          console.log("FAILED...", error);
+          alert("FAILED...", error);
+        }
+      );
+    });
+</script>
 
     
 
