--- a/contactForm.html
+++ b/contactForm.html
@@ -14,7 +14,7 @@
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
       crossorigin="anonymous"
     />
-    <title>Contact Form/title>
+    <title>Contact Form</title>
   </head>
   <body>
 
@@ -117,31 +117,37 @@
       
     ></script>
 
+    <script type="text/javascript">      (function () {
+        emailjs.init("YOUR_USER_ID");
+        emailjs.send("service_isty8b7","template_hghujn7");
+
+      })();
+    </script>
 
 
 <script>
-  // listen to the form submission
-  document
-    .getElementById("myForm")
-    .addEventListener("submit", function (event) {
-      event.preventDefault();
+      // listen to the form submission
+      document
+        .getElementById("myForm")
+        .addEventListener("submit", function (event) {
+          event.preventDefault();
 
-      const serviceID = "service_b4qmiqc";
-      const templateID = "template_fv38whr";
+          const serviceID = "service_b4qmiqc";
+          const templateID = "template_fv38whr";
 
-      // send the email here
-      emailjs.sendForm(serviceID, templateID, this).then(
-        (response) => {
-          console.log("SUCCESS!", response.status, response.text);
-          alert("SUCCESS!");
-        },
-        (error) => {
-          console.log("FAILED...", error);
-          alert("FAILED...", error);
-        }
-      );
-    });
-</script>
+          // send the email here
+          emailjs.sendForm(serviceID, templateID, this).then(
+            (response) => {
+              console.log("SUCCESS!", response.status, response.text);
+              alert("SUCCESS!");
+            },
+            (error) => {
+              console.log("FAILED...", error);
+              alert("FAILED...", error);
+            }
+          );
+        });
+    </script>
 
     
 
