contact form heading update

--- a/contactForm.html
+++ b/contactForm.html
@@ -32,7 +32,7 @@
     <div class="container">
       <div class="row">
         <div class="col align-self-center">
-          <h1 class="text-center">Email - JavaScript Contact Form</h1>
+          <h1 class="text-center">Contact Form</h1>
           <!-- contact form -->
           <form id="myForm">
 
