--- a/contactForm.html
+++ b/contactForm.html
@@ -132,8 +132,8 @@
         .addEventListener("submit", function (event) {
           event.preventDefault();
 
-          const serviceID = "service_b4qmiqc";
-          const templateID = "template_fv38whr";
+          const serviceID = "service_isty8b7";
+          const templateID = "template_hghujn7";
 
           // send the email here
           emailjs.sendForm(serviceID, templateID, this).then(
