--- a/contactForm.html
+++ b/contactForm.html
@@ -149,6 +149,24 @@
         });
     </script>
 
+
+<script>
+
+  function required()
+  {
+  var empt = document.forms["form1"]["text1"].value;
+  if (empt == "")
+  {
+  alert("Please input a Value");
+  return false;
+  }
+  else 
+  {
+  alert('Code has accepted : you can try another');
+  return true; 
+  }
+  }
+</script>
     
 
 </body>
