--- a/contactForm.html
+++ b/contactForm.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="/css/styles.css">
-        <title>Contact</title>
+        <title>ContactForm</title>
         <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
         <script src="/src/contactForm.js"></script>
         <!-- <script src="https://www.google.com/recaptcha/api.js" async defer></script> -->
