--- a/contactForm.html
+++ b/contactForm.html
@@ -4,14 +4,14 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="/css/styles.css">
-        <title>ContactForm</title>
+        <title>Contact</title>
         <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-        <script src="/src/contactForm.js"></script>
+        <script src="/src/contact.js"></script>
         <!-- <script src="https://www.google.com/recaptcha/api.js" async defer></script> -->
     </head>
 <body style="background-color: #00A4BD;">
   <div class="topnav">
-    <a  href="https://shay97279.github.io/">Home</a>
+    <a href="https://shay97279.github.io/">Home</a>
     <a href="https://shay97279.github.io/aboutMe">About Me</a>
     <a href="https://mattm401.github.io/">Course Page</a>
     <a href="https://faithlovell.github.io/">Previous Student</a>
