--- a/aboutMe.html
+++ b/aboutMe.html
@@ -11,7 +11,7 @@
         <a href="https://mattm401.github.io/">Course Page</a>
         <a href="https://faithlovell.github.io/">Previous Student</a>
         <a href="https://rohanyar.github.io/">Next Student</a>
-        <a href="https://shay97279.github.io/contactForm">Contact Form</a>
+        <a href="https://shay97279.github.io/contact">Contact Form</a>
     </div>
     <div style="text-align:center">
         <h1>About Me</h1>
