--- a/contactForm.html
+++ b/contactForm.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="/css/styles.css">
         <title>Contact</title>
         <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-        <script src="/src/contact.js"></script>
+        <script src="/js/contact.js"></script>
         <!-- <script src="https://www.google.com/recaptcha/api.js" async defer></script> -->
     </head>
 <body style="background-color: #00A4BD;">
