testing changes to contactform.html

--- a/contactForm.html
+++ b/contactForm.html
@@ -48,9 +48,10 @@
                 <br>
                 <textarea id="user_message" class="form-control messageBox" required rows="5"></textarea>
             </div>
-            <!-- <div class="g-recaptcha" data-sitekey="6Ld1YVYoAAAAAPuAKlKpSQXauxDDqzybyyG6CKbl" data-callback="enableBtn"></div> -->
-            <input type="submit" id="go" class="button" value="Submit">
-            <span class="success" id="success">Thank you for your message!</span>
+            <input type="submit" id="go" class="button" value="Send Message">
+
+
+            <span class="success" id="success">Message Sent Successfully!</span>
         </form>
     </div>
 </body>
