--- a/contactForm.html
+++ b/contactForm.html
@@ -29,29 +29,34 @@
                 <label for="user_fname">First Name:</label>
                 <input id="user_fname" type="text" class="form-control" required>
             </div>
+            <br>
             <div class="form-group">
                 <label for="user_lname">Last Name:</label>
                 <input id="user_lname" type="text" class="form-control" required>
             </div>
+            <br>
             <div class="form-group">
                 <label for="user_email">Email:</label>
                 <input id="user_email" type="email" class="form-control" required>
                 <span class="email_error" id="email_error">Format: email@provider.domain</span>
             </div>
+            <br>
             <div class="form-group">
                 <label for="user_phone">Phone Number:</label>
                 <input id="user_phone" type="text" class="form-control" required>
                 <span class="phone_error" id="phone_error">Format: ###-###-####</span>
             </div>
+            <br>
             <div class="form-group" >
                 <label for="user_message">Message:</label>
                 <br>
                 <textarea id="user_message" class="form-control messageBox" required rows="5"></textarea>
             </div>
+            <br>
             <input type="submit" id="go" class="button" value="Send Message">
 
-
-            <span class="success" id="success">Message Sent Successfully!</span>
+            <br>
+            <span class="success" id="success">Thanks for Reaching out!</span>
         </form>
     </div>
 </body>
