--- a/contactForm.html
+++ b/contactForm.html
@@ -25,30 +25,30 @@
     <div class="emailstyle" style="padding-top: 45px;">
         <h1>Contact Me</h1>
         <form id="contactform">
-            <div class="form-group">
+            <div class="form-group"  style="text-align:center">
                 <label for="user_fname">First Name:</label>
                 <input id="user_fname" type="text" class="form-control" required>
             </div>
             <br>
-            <div class="form-group">
+            <div class="form-group" style="text-align:center">
                 <label for="user_lname">Last Name:</label>
                 <input id="user_lname" type="text" class="form-control" required>
             </div>
             <br>
-            <div class="form-group">
+            <div class="form-group" style="text-align:center">
                 <span class="email_error" id="email_error">Format: email@provider.domain</span>
                 <br>
                 <label for="user_email">Email:</label>
                 <input id="user_email" type="email" class="form-control" required>
             </div>
             <br>
-            <div class="form-group">
+            <div class="form-group" style="text-align:center">
                 <label for="user_phone">Phone Number:</label>
                 <input id="user_phone" type="text" class="form-control" required>
                 <span class="phone_error" id="phone_error">Format: ###-###-####</span>
             </div>
             <br>
-            <div class="form-group" >
+            <div class="form-group" style="text-align:center">
                 <label for="user_message">Message:</label>
                 <br>
                 <textarea id="user_message" class="form-control messageBox" required rows="5"></textarea>
