styles.css change

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="https://shay97279.github.io/contactForm">Contact Form</a>
     </div>
 
-<div class="box" style="text-align:center" background-color="black">
+<div class="box" style="text-align:center" >
     <div style="text-align:center" >
         <h1 style="text-align:center">Welcome to My Website!</h1>
         <h2 style="text-align:center">Full Name: Shay Patel</h2>
