--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title> Main Page </title>
 </head>
  
-<body>
+<body.body>
 
     <div class="topnav">
         <a class="active" href="#home">Home</a>
