--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title> Main Page </title>
 </head>
  
-<body.body>
+<body style="background: linear-gradient(to bottom, rgba(231, 240, 245, 1) 0%, rgba(170, 221, 235, 1) 100%)">
 
     <div class="topnav">
         <a class="active" href="#home">Home</a>
