--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
 
 </div>
 
+
+<footer>
+    <p><a href="https://www.linkedin.com/in/shay-patel-29abaa154/">LinkedIn</a></p>
+  </footer>
+
 </body>
+
+
+
  
 </html>
+
