--- a/aboutMe.html
+++ b/aboutMe.html
@@ -2,6 +2,7 @@
 <html lang="en-US">
 <head>
     <title>About Me</title>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="https://shay97279.github.io/css/styles.css">
 </head>
 <body>
