--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en-US">
  
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="https://shay97279.github.io/css/styles.css">
     <title> Main Page </title>
 </head>
@@ -48,10 +49,15 @@
 
 
 <footer>
-    <p><a href="https://www.linkedin.com/in/shay-patel-29abaa154/">LinkedIn</a></p>
-  </footer>
+    <h2>Contact Info:</h2>
+    <div class="contact-info">
+        <i class="ri-mail-line"></i><p>patelsap@udel.edu</p>
 
-</body>
+        <a href="https://www.linkedin.com/in/shay-patel-29abaa154/"><i class="ri-linkedin-box-fill"></i><p>Linkedin</p></a>
+
+        <a href="https://github.com/Shay97279/"><i class="ri-github-fill"></i><p>Github</p></a>
+    </div>
+</footer>
 
 
 
