added footer to all pages

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -39,5 +39,16 @@
 
     </div>
 
+
+    <footer>
+        <h2>Contact Info:</h2>
+        <div class="contact-info">
+            <i class="ri-mail-line"></i><p>patelsap@udel.edu</p>
+    
+            <a href="https://www.linkedin.com/in/shay-patel-29abaa154/"><i class="ri-linkedin-box-fill"></i><p>Linkedin</p></a>
+    
+            <a href="https://github.com/Shay97279/"><i class="ri-github-fill"></i><p>Github</p></a>
+        </div>
+    </footer>
 </body>
 </html>
