--- a/aboutMe.html
+++ b/aboutMe.html
@@ -10,6 +10,7 @@
         <a href="https://shay97279.github.io/">Home</a>
         <a class="active" href="#aboutme">About Me</a>
         <a href="https://shay97279.github.io/resume">Resume</a>
+        <a href="https://shay97279.github.io/projects">Projects</a>
         <a href="https://mattm401.github.io/">Course Page</a>
         <a href="https://faithlovell.github.io/">Previous Student</a>
         <a href="https://rohanyar.github.io/">Next Student</a>
