--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <a class="active" href="#home">Home</a>
         <a href="https://shay97279.github.io/aboutMe">About Me</a>
         <a href="https://shay97279.github.io/resume">Resume</a>
+        <a href="https://shay97279.github.io/projects">Projects</a>
         <a href="https://mattm401.github.io/">Course Page</a>
         <a href="https://faithlovell.github.io/">Previous Student</a>
         <a href="https://rohanyar.github.io/">Next Student</a>
