--- a/projects.html
+++ b/projects.html
@@ -9,8 +9,8 @@
     <div class="topnav">
         <a href="https://shay97279.github.io/">Home</a>
         <a href="#aboutme">About Me</a>
-        <a class="active" href="https://shay97279.github.io/resume">Resume</a>
-        <a href="https://shay97279.github.io/projects">Projects</a>
+        <a href="https://shay97279.github.io/resume">Resume</a>
+        <a class="active" href="https://shay97279.github.io/projects">Projects</a>
         <a href="https://mattm401.github.io/">Course Page</a>
         <a href="https://faithlovell.github.io/">Previous Student</a>
         <a href="https://rohanyar.github.io/">Next Student</a>
