added project page w/generic pics

--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,20 @@
         <a href="https://shay97279.github.io/contactForm">Contact Form</a>
     </div>
 
-    <iframe src="resumeUpdated.pdf" width="100%" height="950"></iframe>
+    <h1>Projects</h1>
+
+    <div class="contain">
+            <div class="showcenter">
+                <div><b>Work at Automated Financial Systems</b></div>
+                <div> <img src="appPic.jpeg" alt="generic app pic"><br>
+                    add desc here
+                    <br><br>
+                </div>
+                <div><b>Work at Applied Card Systems</b></div>
+                <div><img src="security.jpeg" alt="generic security pic"><br>
+                    add desc here
+                </div>
+        </div>
 
     <footer>
         <h2>Contact Info:</h2>
