--- a/projects.html
+++ b/projects.html
@@ -22,12 +22,12 @@
     <div class="contain">
             <div class="showcenter">
                 <div><b>Work at Automated Financial Systems</b></div>
-                <div> <img src="appPic.jpeg" alt="generic app pic"><br>
+                <div> <img src="appPic.jpeg" alt="generic app pic" width="500" height="350"><br>
                     add desc here
                     <br><br>
                 </div>
                 <div><b>Work at Applied Card Systems</b></div>
-                <div><img src="security.jpeg" alt="generic security pic"><br>
+                <div><img src="security.jpeg" alt="generic security pic" width="500" height="350"><br>
                     add desc here
                 </div>
         </div>
