fixed div container

--- a/projects.html
+++ b/projects.html
@@ -30,6 +30,8 @@
                 <div><img src="security.jpeg" alt="generic security pic" width="500" height="350"><br>
                     add desc here
                 </div>
+            </div>
+
         </div>
         <br>
 
