added more breaks

--- a/projects.html
+++ b/projects.html
@@ -22,13 +22,13 @@
     <div class="contain">
             <div class="showcenter">
                 <div><b>Work at Automated Financial Systems</b></div>
-                <div> <img src="appPic.jpeg" alt="generic app pic" width="500" height="350"><br>
+                <div> <img src="appPic.jpeg" alt="generic app pic" width="500" height="350"><br><br><br>
                     Reconstructed Administrative Management Console (Full Stack, Enterprise Codebase). Built proof of concept AI application (SciKit Learn, Decision Trees) to make automated company
                     decisions given stored data. Worked closely in the scrum environment & teams with JIRA, standups, testing, and more.
                     <br><br><br><br><br>
                 </div>
                 <div><b>Work at Applied Card Systems</b></div>
-                <div><img src="security.jpeg" alt="generic security pic" width="500" height="350"><br>
+                <div><img src="security.jpeg" alt="generic security pic" width="500" height="350"><br><br><br>
                     Created an app to automate security patching of company workstations and servers. Wrote app in PowerShell using RestAPI and various SQL database systems. Worked closely with project management team to organize, manage, deliver, and deploy application.
                 </div>
             </div>
