--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="en-US">
  
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8620BLNMKJ"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-8620BLNMKJ');
+    </script>
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="https://shay97279.github.io/css/styles.css">
     <title> Main Page </title>
