--- a/resume.html
+++ b/resume.html
@@ -17,7 +17,7 @@
 <body>
     <div class="topnav">
         <a href="https://shay97279.github.io/">Home</a>
-        <a href="#aboutme">About Me</a>
+        <a href="https://shay97279.github.io/aboutMe">About Me</a>
         <a class="active" href="https://shay97279.github.io/resume">Resume</a>
         <a href="https://shay97279.github.io/projects">Projects</a>
         <a href="https://mattm401.github.io/">Course Page</a>
