--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           
     </div>
 
-<div class="box2" style="text-align:center" style="background:linear-gradient(to bottom, rgba(231, 240, 245, 1) 0%, rgb(249, 60, 18) 100%)" >
+<div class="box2" style="text-align:center; background:linear-gradient(to bottom, rgba(231, 240, 245, 1) 0%, rgb(249, 60, 18) 100%)" >
     <div style="text-align:center" >
         <h1 style="text-align:center">Welcome to My Website!</h1>
         <h2 style="text-align:center">Full Name: Shay Patel</h2>
