--- a/resume.html
+++ b/resume.html
@@ -26,7 +26,7 @@
         <a href="https://shay97279.github.io/contactForm">Contact Form</a>
     </div>
 
-    <iframe src="resumeUpdated.pdf" width="100" height="950"></iframe>
+    <iframe src="resumeUpdated.pdf" width="100%" height="950"></iframe>
 
     <footer>
         <h2>Contact Info:</h2>
