--- a/index.html
+++ b/index.html
@@ -21,20 +21,22 @@
 <body style="background: linear-gradient(to bottom, rgba(231, 240, 245, 1) 0%, rgba(170, 221, 235, 1) 100%)">
 
     <div class="topnav" id="myTopnav">
-        <a href="#home" class="active">Home</a>
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
+        <a href="https://shay97279.github.io/" class="active">Home</a>
+        <a href="https://shay97279.github.io/aboutMe">About Me</a>
+        <a href="https://shay97279.github.io/resume">Resume</a>
+        <a href="https://shay97279.github.io/projects">Projects</a>
         <div class="dropdown">
-          <button class="dropbtn">Dropdown
+          <button class="dropbtn">Class Links
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-            <a href="#">Link 1</a>
-            <a href="#">Link 2</a>
-            <a href="#">Link 3</a>
-          </div>
+            <a href="https://mattm401.github.io/">Course Page</a>
+            <a href="https://faithlovell.github.io/">Previous Student</a>
+            <a href="https://rohanyar.github.io/">Next Student</a>
+            </div>
         </div>
-        <a href="#about">About</a>
+        <a href="https://shay97279.github.io/contactForm">Contact Form</a>
+        
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
       </div>
 
