--- a/contactForm.html
+++ b/contactForm.html
@@ -22,16 +22,25 @@
 <body>
 
 
-<div class="topnav">
-    <a  href="https://shay97279.github.io/">Home</a>
-    <a href="https://shay97279.github.io/aboutMe">About Me</a>
-    <a href="https://shay97279.github.io/resume">Resume</a>
-    <a href="https://shay97279.github.io/projects">Projects</a>
-    <a href="https://mattm401.github.io/">Course Page</a>
-    <a href="https://faithlovell.github.io/">Previous Student</a>
-    <a href="https://rohanyar.github.io/">Next Student</a>
-    <a class="active" href="https://shay97279.github.io/contactForm">Contact Form</a>
-</div>
+    <div class="topnav" id="myTopnav">
+        <a href="https://shay97279.github.io/">Home</a>
+        <a href="https://shay97279.github.io/aboutMe">About Me</a>
+        <a href="https://shay97279.github.io/resume">Resume</a>
+        <a href="https://shay97279.github.io/projects">Projects</a>
+        <div class="dropdown">
+          <button class="dropbtn">Class Links
+            <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropdown-content">
+            <a href="https://mattm401.github.io/">Course Page</a>
+            <a href="https://faithlovell.github.io/">Previous Student</a>
+            <a href="https://rohanyar.github.io/">Next Student</a>
+            </div>
+        </div>
+        <a class="active" href="https://shay97279.github.io/contactForm">Contact Form</a>
+        
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+      </div>
 
 
     <div class="emailstyle" style="padding-top: 45px;">
