added career goals

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
 
     <div style="text-align:center">
         <p>The name I go by in class: Shay</p> 
+        <p>I'm interested in pursuing software engineering after graduating. I would like to build software for a company in finance & banking, specifically a large scale bank.</p> 
+
         <br>
         <a href="https://faithlovell.github.io/">Previous Student</a>
         <br>
