added img folder

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             Personal Web Page 1
             patelsap@udel.edu -->
             
-        <img src="pic.jpeg" alt="Professional Photo" >
+        <img src="/img/pic.jpeg" alt="Professional Photo" >
     </div> 
 
     <div style="text-align:center">
