--- a/resume.html
+++ b/resume.html
@@ -37,7 +37,7 @@
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
       </div>
 
-    <iframe src="resumeUpdated.pdf"  height="950"></iframe>
+    <iframe src="resumeUpdated.pdf" width="100%" height="950"></iframe>
 
     <footer>
         <h2>Contact Info:</h2>
